PRODEV-1566. Fix image stretching

--- a/src/components/RideTo/Account/DashboardPageV2/News/NewsItem/styles.scss
+++ b/src/components/RideTo/Account/DashboardPageV2/News/NewsItem/styles.scss
@@ -118,6 +118,11 @@
     width: 100%;
     height: 100%;
   }
+
+  img {
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 .footer {
